--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 	color: #fff;
 }
 
-/*.loader {
+.loader {
     background: #000;
     background: radial-gradient(#222, #000);
     bottom: 0;
@@ -120,4 +120,4 @@ body {
 	100% {
 		transform: rotate(360deg);
 	}
-}*/
+}
