--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ button:hover{
 	background: #ffc74a;
 	animation: 1.2s ease-in-out 0s normal none infinite running trambling-animation;
 }
-@keyframes trambling-animation {
+/*@keyframes trambling-animation {
 	0%, 50%, 100% {
 		transform: rotate(0deg);
 	}
@@ -57,7 +57,7 @@ button:hover{
 	20%, 40% {
 		transform: rotate(2deg);
 	
-}
+}*/
 
 
 .loader {
