--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,30 @@ button:hover{
     display: none;
     margin: 0 auto;
 }
+.nyaCat{
+    animation: my 1s infinite;
+}
+
+@keyframes my {
+    0% { 
+        background-color: #62f442;
+        transform: scale(1.1); 
+    }
+    50% { 
+        background-color: #f6ff00;
+        transform: scale(1.5); }
+    100%{
+        background-color: #62f442;
+        transform: scale(1.1);
+    }    
+}
+
+
+.nyaCat:hover{
+    background-color: #62f442; 
+    animation: my .3s infinite;      
+}
+
 
 
 .loader {
